--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
+    "react-router-native": "^5.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8"
   },
