--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
