--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "burner",
+    "name": "Key Conservation",
     "slug": "react-elements",
     "privacy": "public",
     "sdkVersion": "33.0.0",
