--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-svg": "^9.6.2",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
