Persistant Log In
Continued work on persistant log in

Co-Authored-By: lflores12 <lflores12@users.noreply.github.com>
Co-Authored-By: Zach Christy <zchristy44@gmail.com>

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "burner",
+    "name": "testing",
     "slug": "react-elements",
     "privacy": "public",
     "sdkVersion": "33.0.0",
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "making a test publish"
   }
 }
