--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-asset": "^5.0.0",
     "expo-constants": "^5.0.0",
     "expo-font": "^5.0.0",
+    "expo-image-picker": "^5.0.2",
     "expo-secure-store": "^6.0.0",
     "expo-web-browser": "^5.0.0",
     "jwt-decode": "^2.2.0",
