bug fixes rollout 1
Co-authored-by: Matt Klein <mklein246@gmail.com>
Co-authored-by: Leo Flores <leonelaf12@gmail.com>

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "icon": "./assets/images/keyFullBlack.png",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
