--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.0",
     "expo": "^33.0.0",
-    "expo-asset": "^5.0.0",
+    "expo-analytics-amplitude": "^6.0.0",
+    "expo-asset": "^6.0.0",
     "expo-constants": "^5.0.0",
     "expo-font": "^5.0.0",
     "expo-secure-store": "^6.0.0",
