--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-secure-store": "^6.0.0",
     "expo-web-browser": "^5.0.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
