--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-sticky-header-footer-scroll-view": "^2.1.3",
     "react-native-svg": "^9.6.2",
     "react-native-svg-uri": "^1.2.3",
     "react-native-web": "^0.11.4",
