started adding photo upload but not fully functional
Co-authored-by: Matt Klein <mklein246@gmail.com>
Co-authored-by: Zach Christy <zchristy44@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@expo/samples": "~3.0.0",
     "@expo/vector-icons": "^10.0.1",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "aws-sdk": "^2.511.0",
     "axios": "^0.19.0",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.0",
-    "expo-constants": "^5.0.0",
+    "expo-constants": "^5.0.1",
     "expo-font": "^5.0.0",
     "expo-image-picker": "^5.0.2",
+    "expo-permissions": "^6.0.0",
     "expo-secure-store": "^6.0.0",
     "expo-web-browser": "^5.0.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
