--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll",
-    "postinstall": "rndebugger-open"
+    "test": "jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
