fixed a lot more bugs
Fixed amplitude issues on andriod + some smaller issues + issues with npm i not installing packages.

Co-Authored-By: lflores12 <lflores12@users.noreply.github.com>
Co-Authored-By: duckeverlasting <duckeverlasting@users.noreply.github.com>
Co-Authored-By: ba-zen <ba-zen@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
-  "evDependencies": {
+  "devDependencies": {
     "babel-preset-expo": "^5.1.0",
     "jest-expo": "^33.0.0",
     "react-native-debugger-open": "^0.3.19"
