--- a/app.json
+++ b/app.json
@@ -4,7 +4,10 @@
     "slug": "key-conservation",
     "privacy": "unlisted",
     "sdkVersion": "33.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.1.9",
     "orientation": "portrait",
     "icon": "./assets/images/keyapplogo.png",
@@ -16,12 +19,14 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.kc.keyconservation"
     },
-    "description": "The Key Conservation App\n\nVersion 1.1.9",
+    "description": "The Key Conservation App\n\nVersion 1.3",
     "githubUrl": "https://github.com/labs14-key-conservation/Frontend-Mobile"
   }
 }
