--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
     "react-native-svg": "^9.6.2",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
