--- a/app.json
+++ b/app.json
@@ -4,11 +4,12 @@
     "slug": "key-conservation",
     "privacy": "unlisted",
     "sdkVersion": "34.0.0",
+    "scheme": "keyconservation",
     "platforms": [
       "ios",
       "android"
     ],
-    "version": "1.3",
+    "version": "1.3.2",
     "orientation": "portrait",
     "icon": "./assets/images/keyapplogo.png",
     "splash": {
@@ -23,10 +24,18 @@
       "**/*"
     ],
     "ios": {
+      "infoPlist": {
+        "CFBundleURLTypes": [{
+          "CFBundleTypeRole": "None",
+          "CFBundleURLName": "auth0",
+          "CFBundleURLSchemes": ["com.kc.keyconservation"]
+          }],
+      },
+      "buildNumber": "4",
       "supportsTablet": true,
       "bundleIdentifier": "com.kc.keyconservation"
     },
-    "description": "The Key Conservation App\n\nVersion 1.3",
+    "description": "The Key Conservation App\n\nVersion 1.3.2",
     "githubUrl": "https://github.com/labs14-key-conservation/Frontend-Mobile"
   }
 }
