--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer-s3": "^2.9.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
