Added Version Code
In order to publish a new APK to the Google Play store, configurations must be made inside of the app.json 

Refer to https://docs.expo.io/versions/v34.0.0/workflow/configuration/

--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "**/*"
     ],
     "android": {
-      "package": "com.kc.keyconservation"
+      "package": "com.kc.keyconservation",
+      "versionCode": 2
     },
     "ios": {
       "infoPlist": {
