--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/samples": "~3.0.0",
     "@expo/vector-icons": "^10.0.1",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "@skele/components": "^1.0.0-alpha.40",
     "aws-sdk": "^2.541.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
