--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-popup-menu": "^0.15.6",
     "react-native-search-filter": "^0.1.4",
