--- a/app.json
+++ b/app.json
@@ -5,11 +5,8 @@
     "privacy": "unlisted",
     "sdkVersion": "35.0.0",
     "scheme": "keyconservation",
-    "platforms": [
-      "ios",
-      "android"
-    ],
-    "version": "2.0.0",
+    "platforms": ["ios", "android"],
+    "version": "3.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/keyapplogo.png",
     "splash": {
@@ -20,12 +17,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "android": {
       "package": "com.kc.keyconservation",
-      "versionCode": 2
+      "versionCode": 3
     },
     "ios": {
       "infoPlist": {
@@ -33,9 +28,7 @@
           {
             "CFBundleTypeRole": "None",
             "CFBundleURLName": "auth0",
-            "CFBundleURLSchemes": [
-              "com.kc.keyconservation"
-            ]
+            "CFBundleURLSchemes": ["com.kc.keyconservation"]
           }
         ]
       },
