--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^10.0.1",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@skele/components": "^1.0.0-alpha.40",
+    "airtable": "^0.7.2",
     "aws-sdk": "^2.541.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
