:sparkles: Share post to Twitter on behalf of user
Add share button to FeedCampaign, add react-native-popover-view library to popover a dialog that contains all social share buttons"

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 node_modules
-.expo
+.expo/*
+.expo/
 
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
