--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-popover-view": "^2.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
