--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@expo/samples": "~3.0.0",
-    "@expo/vector-icons": "^10.0.1",
+    "@expo/vector-icons": "^10.0.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@skele/components": "^1.0.0-alpha.40",
     "airtable": "^0.7.2",
@@ -45,6 +45,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-inappbrowser-reborn": "^3.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-search-filter": "^0.1.4",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
@@ -58,8 +59,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "react-native-popover-view": "^2.0.5"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
