--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-search-filter": "^0.1.4",
