--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "multer-s3": "^2.9.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.2.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-elements": "^1.1.0",
+    "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-locationiq": "^0.1.0",
     "react-native-maps": "^0.26.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
