--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-av": "^7.0.1",
     "expo-constants": "^7.0.0",
     "expo-document-picker": "^7.0.0",
-    "expo-font": "^7.0.0",
+    "expo-font": "~7.0.0",
     "expo-image-picker": "^7.0.0",
     "expo-permissions": "^7.0.0",
     "expo-secure-store": "^7.0.0",
