--- a/app.json
+++ b/app.json
@@ -3,12 +3,9 @@
     "name": "Key Conservation",
     "slug": "key-conservation",
     "privacy": "unlisted",
-    "sdkVersion": "36.0.0",
+    "sdkVersion": "33.0.0",
     "scheme": "keyconservation",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "3.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/keyapplogo.png",
@@ -20,9 +17,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "android": {
       "package": "com.kc.keyconservation",
       "versionCode": 3
@@ -33,9 +28,7 @@
           {
             "CFBundleTypeRole": "None",
             "CFBundleURLName": "auth0",
-            "CFBundleURLSchemes": [
-              "com.kc.keyconservation"
-            ]
+            "CFBundleURLSchemes": ["com.kc.keyconservation"]
           }
         ]
       },
