--- a/package.json
+++ b/package.json
@@ -13,50 +13,50 @@
   },
   "dependencies": {
     "@expo/samples": "~3.0.0",
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^10.0.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@skele/components": "^1.0.0-alpha.40",
     "airtable": "^0.7.2",
     "aws-sdk": "^2.541.0",
     "axios": "^0.19.0",
-    "expo": "^35.0.0",
-    "expo-analytics-amplitude": "^7.0.0",
-    "expo-asset": "^7.0.0",
-    "expo-av": "^7.0.1",
-    "expo-constants": "^7.0.0",
-    "expo-document-picker": "^7.0.0",
-    "expo-font": "~7.0.0",
-    "expo-image-picker": "^7.0.0",
-    "expo-permissions": "^7.0.0",
-    "expo-secure-store": "^7.0.0",
-    "expo-web-browser": "^7.0.1",
+    "expo": "^36.0.0",
+    "expo-analytics-amplitude": "~8.0.0",
+    "expo-asset": "~8.0.0",
+    "expo-av": "~8.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
+    "expo-secure-store": "~8.0.0",
+    "expo-web-browser": "~8.0.0",
     "jwt-decode": "^2.2.0",
-    "lottie-react-native": "^2.6.1",
+    "lottie-react-native": "~2.6.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-geocode": "^0.2.1",
     "react-lifecycles-compat": "^3.0.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-elements": "^1.1.0",
     "react-native-geocoder": "^0.5.0",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-locationiq": "^0.1.0",
-    "react-native-maps": "^0.26.1",
+    "react-native-maps": "0.26.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-search-filter": "^0.1.4",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
-    "react-native-svg": "^9.4.0",
+    "react-native-svg": "9.13.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.4",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
@@ -66,8 +66,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.0",
-    "jest-expo": "^33.0.0"
+    "babel-preset-expo": "^8.0.0",
+    "jest-expo": "^36.0.0"
   },
   "private": true
 }
