--- a/app.json
+++ b/app.json
@@ -3,9 +3,12 @@
     "name": "Key Conservation",
     "slug": "key-conservation",
     "privacy": "unlisted",
-    "sdkVersion": "33.0.0",
+    "sdkVersion": "36.0.0",
     "scheme": "keyconservation",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "3.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/keyapplogo.png",
@@ -17,7 +20,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "android": {
       "package": "com.kc.keyconservation",
       "versionCode": 3
@@ -28,7 +33,9 @@
           {
             "CFBundleTypeRole": "None",
             "CFBundleURLName": "auth0",
-            "CFBundleURLSchemes": ["com.kc.keyconservation"]
+            "CFBundleURLSchemes": [
+              "com.kc.keyconservation"
+            ]
           }
         ]
       },
