--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-reanimated": "^1.7.0",
     "react-native-search-filter": "^0.1.4",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
     "react-native-svg": "9.13.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.11.0",
+    "react-navigation": "^4.0.10",
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
     "redux": "^4.0.4",
