--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/samples": "~3.0.0",
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@skele/components": "^1.0.0-alpha.40",
     "airtable": "^0.7.2",
@@ -51,14 +52,15 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-search-filter": "^0.1.4",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
     "react-native-svg": "9.13.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^3.11.0",
+    "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
     "redux": "^4.0.4",
