--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.11.0",
+    "react-navigation": "4.0.10",
     "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
