--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-popup-menu": "^0.15.6",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-search-filter": "^0.1.4",
+    "react-native-slick": "^1.0.2",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
     "react-native-svg": "9.13.3",
     "react-native-svg-uri": "^1.2.3",
