--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "^2.0.16",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.0",
     "react-router-native": "^5.0.1",
     "redux": "^4.0.4",
