--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-search-filter": "^0.1.4",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
