--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-animatable": "^1.3.2",
+    "react-native-carousel": "^0.12.0",
     "react-native-elements": "^1.1.0",
+    "react-native-fading-slides": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
