working loading video

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo": "^36.0.0",
     "expo-analytics-amplitude": "~8.0.0",
     "expo-asset": "~8.0.0",
-    "expo-av": "~8.0.0",
+    "expo-av": "^8.0.0",
     "expo-constants": "~8.0.0",
     "expo-document-picker": "~8.0.0",
     "expo-font": "~8.0.0",
@@ -59,6 +59,7 @@
     "react-native-svg": "9.13.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.0",
     "react-navigation-stack": "^2.0.16",
