:package: updated packages

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-popup-menu": "^0.15.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.32",
     "react-native-search-filter": "^0.1.4",
     "react-native-slick": "^1.0.2",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
