--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-geocode": "^0.2.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.2",
     "react-native-carousel": "^0.12.0",
     "react-native-elements": "^1.2.7",
