Lay groundwork UI and logic for embedded login

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-secure-store": "~8.0.0",
     "expo-web-browser": "~8.0.0",
     "for-each": "^0.3.3",
+    "global": "^4.4.0",
     "jwt-decode": "^2.2.0",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.24.0",
@@ -44,6 +45,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.2",
+    "react-native-auth0": "^2.2.0",
     "react-native-carousel": "^0.12.0",
     "react-native-elements": "^1.2.7",
     "react-native-fading-slides": "^0.3.1",
@@ -67,6 +69,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-version-check-expo": "^3.4.0",
     "react-native-video": "^5.0.2",
     "react-native-web": "^0.11.7",
     "react-navigation": "4.0.10",
