--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "string.prototype.trim": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "babel-preset-expo": "^8.0.0",
     "jest-expo": "^36.0.0"
   },
