--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       "versionCode": 10,
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDy4Hu-hg2voDy3_99nI1evzpt4FYJRzlI"
+          "apiKey": "process.env.REACT_APP_GOOGLE_MAPS_API_KEY"
         }
       }
     },
