removed bacgroundColor style from app.json splash

--- a/app.json
+++ b/app.json
@@ -11,8 +11,7 @@
     "icon": "./assets/images/keyapplogo.png",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#FFF"
+      "resizeMode": "cover"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
