--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-auth0": "^2.3.0",
     "react-native-carousel": "^0.12.0",
+    "react-native-country-picker-modal": "^1.10.0",
     "react-native-elements": "^1.2.7",
     "react-native-fading-slides": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
