--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.2",
+    "react-native-animated-progress": "^1.0.0",
     "react-native-auth0": "^2.3.0",
     "react-native-carousel": "^0.12.0",
     "react-native-country-picker-modal": "^1.10.0",
