made comment ellipse vertical

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-analytics-amplitude": "~8.0.0",
     "expo-asset": "~8.0.0",
     "expo-av": "^8.0.0",
+    "expo-cli": "^3.16.1",
     "expo-constants": "~8.0.0",
     "expo-document-picker": "~8.0.0",
     "expo-font": "~8.0.0",
