:zap: initial setup, deleted old fonts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "airtable": "^0.7.2",
     "aws-sdk": "^2.541.0",
     "axios": "^0.19.0",
+    "entypo": "^2.1.0",
     "expo": "^36.0.0",
     "expo-analytics-amplitude": "~8.0.0",
     "expo-asset": "~8.0.0",
@@ -54,6 +55,7 @@
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
+    "react-native-ionicons": "^5.0.0-beta",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-locationiq": "^0.1.0",
     "react-native-maps": "0.26.1",
