installed new emoji package

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "rn-slack-emoji-picker": "^1.0.14",
     "string.prototype.trim": "^1.2.1"
   },
   "collectCoverageFrom": [
