--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expo-analytics-amplitude": "~8.0.0",
     "expo-asset": "~8.0.0",
     "expo-av": "^8.0.0",
-    "expo-cli": "^3.16.1",
+    "expo-cli": "^3.18.6",
     "expo-constants": "~8.0.0",
     "expo-document-picker": "~8.0.0",
     "expo-font": "~8.0.0",
@@ -52,6 +52,7 @@
     "react-native-carousel": "^0.12.0",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-elements": "^1.2.7",
+    "react-native-emoji-selector": "^0.1.8",
     "react-native-fading-slides": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "~1.5.0",
@@ -87,6 +88,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "string.prototype.trim": "^1.2.1"
   },
   "collectCoverageFrom": [
