--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-carousel": "^0.12.0",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-elements": "^1.2.7",
+    "react-native-emoji-selector": "^0.1.8",
     "react-native-fading-slides": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "~1.5.0",
