--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "string.prototype.trim": "^1.2.1"
   },
   "collectCoverageFrom": [
