--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-native-slack-emoji": "^0.0.1",
     "react-native-slick": "^1.0.2",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
-    "react-native-svg": "9.13.3",
+    "react-native-svg": "^9.13.3",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^2.13.0",
