--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-document-picker": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-linear-gradient": "^8.1.0",
     "expo-permissions": "~8.0.0",
     "expo-secure-store": "~8.0.0",
     "expo-web-browser": "~8.0.0",
