--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
     "react-native-reanimated": "^1.7.0",
+    "react-native-refresh-control": "^2.1.0",
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.32",
