--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
   "dependencies": {
     "@expo/samples": "~3.0.0",
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@skele/components": "^1.0.0-alpha.40",
     "airtable": "^0.7.2",
     "aws-sdk": "^2.541.0",
     "axios": "^0.19.0",
-    "expo": "^36.0.0",
-    "expo-analytics-amplitude": "~8.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-av": "^8.0.0",
+    "expo": "^37.0.0",
+    "expo-analytics-amplitude": "~8.1.0",
+    "expo-asset": "~8.1.5",
+    "expo-av": "~8.1.0",
     "expo-cli": "^3.21.5",
-    "expo-constants": "~8.0.0",
-    "expo-document-picker": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-linear-gradient": "^8.1.0",
-    "expo-permissions": "~8.0.0",
-    "expo-secure-store": "~8.0.0",
-    "expo-web-browser": "~8.0.0",
+    "expo-constants": "~9.0.0",
+    "expo-document-picker": "~8.1.0",
+    "expo-font": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-linear-gradient": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
+    "expo-web-browser": "~8.2.1",
     "for-each": "^0.3.3",
     "global": "^4.4.0",
     "jwt-decode": "^2.2.0",
@@ -45,7 +45,7 @@
     "react-dom": "16.9.0",
     "react-geocode": "^0.2.1",
     "react-lifecycles-compat": "^3.0.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.2",
     "react-native-animated-progress": "^1.0.0",
@@ -56,7 +56,7 @@
     "react-native-emoji-selector": "^0.1.8",
     "react-native-fading-slides": "^0.3.1",
     "react-native-geocoder": "^0.5.0",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-inappbrowser-reborn": "^3.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-locationiq": "^0.1.0",
@@ -64,16 +64,16 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-popover-view": "^2.0.5",
     "react-native-popup-menu": "^0.15.6",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-refresh-control": "^2.1.0",
     "react-native-responsive-dimensions": "^3.0.0",
-    "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-search-filter": "^0.1.4",
     "react-native-slack-emoji": "^0.0.1",
     "react-native-slick": "^1.0.2",
     "react-native-sticky-header-footer-scroll-view": "^2.1.3",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "11.0.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^2.13.0",
@@ -100,8 +100,8 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "babel-preset-expo": "^8.0.0",
-    "jest-expo": "^36.0.0"
+    "babel-preset-expo": "^8.1.0",
+    "jest-expo": "^37.0.0"
   },
   "private": true
 }
