resinstalled to latest version of jest. Writing test to take snapshot of notifications tab to compare. Currently pulling error

--- a/package.json
+++ b/package.json
@@ -99,8 +99,9 @@
     "!**/vendor/**"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "babel-preset-expo": "^8.0.0",
+    "jest": "^26.0.1",
     "jest-expo": "^36.0.0"
   },
   "private": true
