--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "babel-preset-expo": "^8.0.0",
     "jest": "^26.0.1",
-    "jest-expo": "^36.0.0"
+    "jest-expo": "^36.0.0",
+    "redux-mock-store": "^1.5.4"
   },
   "private": true
 }
