--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "extensions.ignoreRecommendations": true
+    "extensions.ignoreRecommendations": true
 }
